pasta auth para autenticacao do usuario, pasta user para criacao e manipulacao dos dados do usuario, pasta product criacao dos produtos, pasta categories para criacao das categorias, pasta order criada mas ainda nao implementada, pasta prisma com as migrations

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DATABASE_URL=mysql://root:root@database:3306/usuario
+DATABASE_URL=mysql://root:root@database:3306/mercadolivre
+
+JWT_SECRET="s2a!Fhurzw#@PXtbZ#aI"
