--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3'
 services:
   server:
     image: nestjs-server
@@ -19,16 +19,16 @@ services:
       - NODE_ENV=development
   database:
     image: mysql:8
-    container_name: mysql_database_user
+    restart: always
+    container_name: mysql_database_mercado
     ports:
       - 3309:3306
     environment:
-      MYSQL_DATABASE: "usuario"
-      MYSQL_USER: "root"
+      MYSQL_DATABASE: "mercadolivre"
       MYSQL_PASSWORD: "root"
       MYSQL_ROOT_PASSWORD: root
     volumes: # onde serão armazenadas as informações do banco
-      - dbdata:/var/lib/mysql/data
+      - dbdata:/var/lib/mysql/
 
 volumes:
   dbdata:
